--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.8.0",
         "sass": "^1.56.1",
+        "select2": "^4.1.0-rc.0",
         "vite": "^4.0.0"
     }
 }
