--- a/composer.json
+++ b/composer.json
@@ -33,12 +33,18 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+
+            "app/Helpers/helpers.php"
+    
+        ]
     },
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
         }
+
     },
     "scripts": {
         "post-autoload-dump": [
